Pull request: AG-16927 Fix toggl's positions
Merge in EXTENSIONS/vpn-extension from fix/AG-16927 to master

Squashed commit of the following:

commit a0a091f5a60db1985d238024fbc29cfbf87e97e4
Merge: 3e26f3fd 8b9da905
Author: tvinzz <o.labudko@adguard.com>
Date:   Wed Nov 2 04:51:28 2022 +0700

    Merge branch 'master' into fix/AG-16927

commit 3e26f3fd7c19587d807fe6b69e7b186cfa444203
Author: tvinzz <o.labudko@adguard.com>
Date:   Tue Nov 1 23:02:28 2022 +0700

    fixed exclusions layout

commit 7df1eb294c7d342e05d7cd6547a9e847b61b5ac3
Author: tvinzz <o.labudko@adguard.com>
Date:   Tue Nov 1 21:16:23 2022 +0700

    fixed layouts

commit 249cbaa537e3e8e6233cc7ad23999b5e4db7be94
Author: tvinzz <o.labudko@adguard.com>
Date:   Sat Oct 29 03:00:22 2022 +0700

    fixed options items layout

--- a/src/options/components/Exclusions/ChildrenList/ChildrenListItem/children-list-item.pcss
+++ b/src/options/components/Exclusions/ChildrenList/ChildrenListItem/children-list-item.pcss
@@ -4,6 +4,7 @@
     align-items: flex-start;
     padding: 10px 0 10px 30px;
     border-radius: 5px;
+    min-width: 500px;
 
     &:first-child {
         padding-left: 15px;
