--- a/src/options/components/Support/support.pcss
+++ b/src/options/components/Support/support.pcss
@@ -20,6 +20,7 @@
         .support-item__area {
             display: flex;
             width: 100%;
+            min-width: 450px;
 
             .icon {
                 margin-right: 16px;
